// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiSideNavItem can be disabled 1`] = `
<div
  class="euiSideNavItem euiSideNavItem--root"
>
  <button
    class="euiSideNavItemButton"
    disabled=""
    type="button"
  >
    <span
      class="euiSideNavItemButton__content"
    >
      <span
        class="euiSideNavItemButton__label euiSideNavItemButton__label--truncated"
        title="Children"
      >
        Children
      </span>
    </span>
  </button>
</div>
`;

exports[`EuiSideNavItem can be emphasized 1`] = `
<div
  class="euiSideNavItem euiSideNavItem--root euiSideNavItem--emphasized"
>
  <div
    class="euiSideNavItemButton"
  >
    <span
      class="euiSideNavItemButton__content"
    >
      <span
        class="euiSideNavItemButton__label euiSideNavItemButton__label--truncated"
        title="Children"
      >
        Children
      </span>
    </span>
  </div>
</div>
`;

exports[`EuiSideNavItem can have truncation turned off 1`] = `
<div
  class="euiSideNavItem euiSideNavItem--root"
>
  <div
    class="euiSideNavItemButton"
  >
    <span
      class="euiSideNavItemButton__content"
    >
      <span
        class="euiSideNavItemButton__label"
      >
        Children
      </span>
    </span>
  </div>
</div>
`;

exports[`EuiSideNavItem href is rendered 1`] = `
<div
  class="euiSideNavItem euiSideNavItem--root"
>
  <a
    class="euiSideNavItemButton euiSideNavItemButton--isClickable"
    href="#"
    rel="noreferrer"
  >
    <span
      class="euiSideNavItemButton__content"
    >
      <span
        class="euiSideNavItemButton__label euiSideNavItemButton__label--truncated"
      >
        <button />
      </span>
    </span>
  </a>
</div>
`;

exports[`EuiSideNavItem href is rendered with rel 1`] = `
<div
  class="euiSideNavItem euiSideNavItem--root"
>
  <a
    class="euiSideNavItemButton euiSideNavItemButton--isClickable"
    href="#"
    rel="noopener noreferrer"
  >
    <span
      class="euiSideNavItemButton__content"
    >
      <span
        class="euiSideNavItemButton__label euiSideNavItemButton__label--truncated"
      >
        <button />
      </span>
    </span>
  </a>
</div>
`;

exports[`EuiSideNavItem is rendered 1`] = `
<div
  class="euiSideNavItem euiSideNavItem--root"
>
  <div
    class="euiSideNavItemButton"
  >
    <span
      class="euiSideNavItemButton__content"
    >
      <span
        class="euiSideNavItemButton__label euiSideNavItemButton__label--truncated"
      >
        <button
          aria-label="aria-label"
          class="testClass1 testClass2 emotion-euiTestCss"
          data-test-subj="test subject string"
        />
      </span>
    </span>
  </div>
</div>
`;

exports[`EuiSideNavItem isSelected defaults to false 1`] = `
<div
  class="euiSideNavItem euiSideNavItem--root"
>
  <div
    class="euiSideNavItemButton"
  >
    <span
      class="euiSideNavItemButton__content"
    >
      <span
        class="euiSideNavItemButton__label euiSideNavItemButton__label--truncated"
      >
        <button />
      </span>
    </span>
  </div>
</div>
`;

exports[`EuiSideNavItem isSelected is rendered when specified as true 1`] = `
<div
  class="euiSideNavItem euiSideNavItem--root"
>
  <div
    class="euiSideNavItemButton euiSideNavItemButton-isSelected"
  >
    <span
      class="euiSideNavItemButton__content"
    >
      <span
        class="euiSideNavItemButton__label euiSideNavItemButton__label--truncated"
      >
        <button />
      </span>
    </span>
  </div>
</div>
`;

exports[`EuiSideNavItem preserves child's classes 1`] = `
<div
  class="euiSideNavItem euiSideNavItem--root"
>
  <div
    class="euiSideNavItemButton"
  >
    <span
      class="euiSideNavItemButton__content"
    >
      <span
        class="euiSideNavItemButton__label euiSideNavItemButton__label--truncated"
      >
        <button
          class="test"
        />
      </span>
    </span>
  </div>
</div>
`;
